No new working functionality.
Things started:

- Making the screen manager (SM) threaded (will do this with other things as well)
- Making a fps limiter for SM
- Layed out the simple rect class for physics manager
- Plan on adding support for particle effects and some other things like glow in physics manager

I have not compiled this version and it is not intended to be. Not sure it will even compile.

Commit by: <planemantheace@gmail.com>

--- a/Planeman - RTS.cbp
+++ b/Planeman - RTS.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-fexpensive-optimizations" />
+					<Add option="-Os" />
 					<Add option="-O3" />
 					<Add option="-g" />
 					<Add directory="include" />
@@ -40,9 +41,11 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="include\event_manager.h" />
 		<Unit filename="include\physics.h" />
 		<Unit filename="include\screen_manager.h" />
 		<Unit filename="include\std_gfx.h" />
+		<Unit filename="src\event_manager.cpp" />
 		<Unit filename="src\main.cpp" />
 		<Unit filename="src\physics.cpp" />
 		<Unit filename="src\screen_manager.cpp" />
