--- a/Planeman - RTS.cbp
+++ b/Planeman - RTS.cbp
@@ -39,8 +39,13 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-Os" />
+			<Add option="-O3" />
 			<Add option="-Wall" />
 		</Compiler>
+		<Linker>
+			<Add option="-lmingw32 -lSDLmain -lSDL" />
+		</Linker>
 		<Unit filename="include\event_manager.h" />
 		<Unit filename="include\physics.h" />
 		<Unit filename="include\screen_manager.h" />
